2014-12-19 Fred Gleason <fredg@paravelsystems.com> 	* Converted 'Arbitron' report to use spreadsheet 	rendering library.

--- a/ChangeLog
+++ b/ChangeLog
@@ -738,3 +738,6 @@
 	'Affiliates by Program/DMA Market', Affiliates by Program/MSA Market',
 	'Affiliate/Contacts by Program' reports to use spreadsheet
 	rendering library.
+2014-12-19 Fred Gleason <fredg@paravelsystems.com>
+	* Converted 'Arbitron' report to use spreadsheet
+	rendering library.
