2014-12-08 Fred Gleason <fredg@paravelsystems.com> 	* Fixed a bug in 'rlm/rlm_live365.c' where the 'album' field was 	not escaped correctly.

--- a/ChangeLog
+++ b/ChangeLog
@@ -754,3 +754,6 @@
 2014-12-22 Fred Gleason <fredg@paravelsystems.com>
 	* Modified 'davit/edit_airing.cpp' and 'davit/list_airings.cpp'
 	to allow air times to end at midnight.
+2014-12-23 Fred Gleason <fredg@paravelsystems.com>
+	* Converted 'RadioAmerica Affiliates' report to use the
+	spreadsheet rendering library.
