2015-01-12 Fred Gleason <fredg@paravelsystems.com> 	* Incremented the package version to 2.2.1.

--- a/ChangeLog
+++ b/ChangeLog
@@ -792,3 +792,5 @@
 	target.
 	* Fixed a bug in 'davit/davit.spec.in' that broke the 'make rpm'
 	target.
+2015-01-12 Fred Gleason <fredg@paravelsystems.com>
+	* Incremented the package version to 2.2.1.
