2015-01-13 Fred Gleason <fredg@paravelsystems.com> 	* Incremented the package version to 2.2.3.

--- a/ChangeLog
+++ b/ChangeLog
@@ -797,3 +797,5 @@
 2015-01-12 Fred Gleason <fredg@paravelsystems.com>
 	* Removed the 'City' and 'State' fields from the Pick Fields
 	dialog for the 'Affiliate by Program' report.
+2015-01-13 Fred Gleason <fredg@paravelsystems.com>
+	* Incremented the package version to 2.2.3.
