2015-01-23 Fred Gleason <fredg@paravelsystems.com> 	* Incremented the package version to 2.2.4.

--- a/ChangeLog
+++ b/ChangeLog
@@ -803,3 +803,5 @@
 	* Fixed a bug in 'davit/affiliatesbyprogram_report.cpp' that
 	caused contact information to be incorrect in the
 	'Affiliates/Admin Contacts by Program' report.
+2015-01-23 Fred Gleason <fredg@paravelsystems.com>
+	* Incremented the package version to 2.2.4.
