--- a/ChangeLog
+++ b/ChangeLog
@@ -833,3 +833,5 @@
 	* Refactored the 'Login' dialog in davit(1).
 2025-05-29 Fred Gleason <fredg@paravelsystems.com>
 	* Refactored the user management dialogs in davit(1) to use a model.
+2025-06-02 Fred Gleason <fredg@paravelsystems.com>
+	* Refactored the 'List Affiliates' and 'Edit Affiliate' dialogs.
