Fixed type in 'ChangeLog'
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -834,4 +834,5 @@
 2025-05-29 Fred Gleason <fredg@paravelsystems.com>
 	* Refactored the user management dialogs in davit(1) to use a model.
 2025-06-02 Fred Gleason <fredg@paravelsystems.com>
-	* Refactored the 'List Affiliates' and 'Edit Affiliate' dialogs.
+	* Refactored the 'List Affiliates' and 'Edit Affiliate' dialogs in
+	davit(1).
