2025-06-03 Fred Gleason <fredg@paravelsystems.com> 	* Reenabled the ability to add and delete contacts in the 'Contacts' 	dialog in davit(1).
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -841,3 +841,6 @@
 2025-06-03 Fred Gleason <fredg@paravelsystems.com>
 	* Refactored the 'Program List for <affiliate>' dialog in davit(1).
 	* Refactored the 'Affiliate History' dialog in davit(1).
+2025-06-03 Fred Gleason <fredg@paravelsystems.com>
+	* Reenabled the ability to add and delete contacts in the 'Contacts'
+	dialog in davit(1).
