--- a/ChangeLog
+++ b/ChangeLog
@@ -863,3 +863,6 @@
 2025-06-26 Fred Gleason <fredg@paravelsystems.com>
 	* Adjusted the column width for the days of the week indicators
 	in davit(1)'s 'Edit Show Time' dialog.
+2025-06-26 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed a regression in davit(1) where the incorrect time format
+	was displayed for the start end times in 'Program List' dialog.
