--- a/ChangeLog
+++ b/ChangeLog
@@ -874,3 +874,6 @@
 	davit(1).
 2025-06-26 Fred Gleason <fredg@paravelsystems.com>
 	* Refactored the 'Networks' dialog in davit(1).
+2025-06-29 Fred Gleason <fredg@paravelsystems.com>
+	* Refactored the 'List Programs', 'Edit Program' and 'Edit Feed Slot'
+	dialogs in davit(1).
