2025-07-08 Fred Gleason <fredg@paravelsystems.com> 	* Removed dead code in 'davit/list_affiliates.cpp'.
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -890,3 +890,5 @@
 	* Refactored the 'Generate Affidavit' dialog in davit(1).
 2025-07-08 Fred Gleason <fredg@paravelsystems.com>
 	* Tweaked font layouts for affidavit print outs in davit(1).
+2025-07-08 Fred Gleason <fredg@paravelsystems.com>
+	* Removed dead code in 'davit/list_affiliates.cpp'.
