--- a/ChangeLog
+++ b/ChangeLog
@@ -907,5 +907,5 @@
 	* Got the affiliate web interface working.
 2025-07-15 Fred Gleason <fredg@paravelsystems.com>
 	* Fixed a bug in the 'List Affiliates' dialog in davit(1) that broke
-	filtering by call letters when the 'Show Affiliates Olny' checkbox
+	filtering by call letters when the 'Show Affiliates Only' checkbox
 	was ticked.
