--- a/ChangeLog
+++ b/ChangeLog
@@ -953,3 +953,5 @@
 	* Removed the 'davit-importers' RPM package.
 2025-07-24 Fred Gleason <fredg@paravelsystems.com>
 	* Removed the vmime dependency.
+2025-07-25 Fred Gleason <fredg@paravelsystems.com>
+	* Cleaned up build warnings.
