2025-07-29 Fred Gleason <fredg@paravelsystems.com> 	* Hid the 'Generate Affidavit' button in the 'List Programs' dialog.
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -955,3 +955,5 @@
 	* Removed the vmime dependency.
 2025-07-25 Fred Gleason <fredg@paravelsystems.com>
 	* Cleaned up build warnings.
+2025-07-29 Fred Gleason <fredg@paravelsystems.com>
+	* Hid the 'Generate Affidavit' button in the 'List Programs' dialog.
