2025-07-30 Fred Gleason <fredg@paravelsystems.com> 	* Moved the 'AlgoComboBox' widget out of the convenience library 	into 'davit/'.
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -963,3 +963,6 @@
 2025-07-30 Fred Gleason <fredg@paravelsystems.com>
 	* Moved the 'StateComboBox' widget out of the convenience library
 	into 'davit/'.
+2025-07-30 Fred Gleason <fredg@paravelsystems.com>
+	* Moved the 'AlgoComboBox' widget out of the convenience library
+	into 'davit/'.
