2025-08-14 Fred Gleason <fredg@paravelsystems.com> 	* Removed 'utils/vnc/'.
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1028,3 +1028,5 @@
 2025-08-14 Fred Gleason <fredg@paravelsystems.com>
 	* Removed 'build_win32.bat', 'davit.ini', 'davit.ism' and
 	'kdmrc-example'.
+2025-08-14 Fred Gleason <fredg@paravelsystems.com>
+	* Removed 'utils/vnc/'.
