--- a/ChangeLog
+++ b/ChangeLog
@@ -1034,3 +1034,5 @@
 	* Fixed a bug in the 'davit-core' DEB package that caused the
 	davit.conf(5) configuration file to fail to be initialized
 	correctly.
+2025-08-14 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed bugs in 'configure.ac' that caused spurious error messages.
