--- a/ChangeLog
+++ b/ChangeLog
@@ -1038,3 +1038,5 @@
 	* Fixed bugs in 'configure.ac' that caused spurious error messages.
 2025-08-14 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to v3.0.0rc0.
+2025-08-14 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed a bug that broke the 'make deb' target.
