--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
 The NEWS file for the Davit package.
 
 -------------------------------------------------------------------------------
-v3.0.0rc0 -- 14 August 2025
+v3.0.0rc0a -- 14 August 2025
 
 Changes:
    Toolkit Changes. Ported code to use Qt6.
