2025-08-14 Fred Gleason <fredg@paravelsystems.com> 	* Added an 'apache2' dependency to the 'davit-web' DEB package.
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1042,3 +1042,5 @@
 	* Fixed a bug that broke the 'make deb' target.
 2025-08-14 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to v3.0.0rc0a.
+2025-08-14 Fred Gleason <fredg@paravelsystems.com>
+	* Added an 'apache2' dependency to the 'davit-web' DEB package.
