--- a/ChangeLog
+++ b/ChangeLog
@@ -1104,3 +1104,5 @@
 	* Added an icons for Reports in 'icons/report.xpm'.
 2025-09-03 Fred Gleason <fredg@paravelsystems.com>
 	* Added an application icon for davit(1).
+2025-09-03 Fred Gleason <fredg@paravelsystems.com>
+	* Incremented the package version to 3.0.0rc1.
