2025-09-04 Fred Gleason <fredg@paravelsystems.com> 	* Added a 'postfix' dependency to the 'davit-gui' DEB package.
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1106,3 +1106,5 @@
 	* Added an application icon for davit(1).
 2025-09-03 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to 3.0.0rc1.
+2025-09-04 Fred Gleason <fredg@paravelsystems.com>
+	* Added a 'postfix' dependency to the 'davit-gui' DEB package.
