--- a/ChangeLog
+++ b/ChangeLog
@@ -1146,3 +1146,5 @@
 	database connections to ten seconds.
 	* Added support for a 'ConnectionTime=' directive in the '[mySQL]'
 	section of davit.conf(5).
+2025-09-30 Fred Gleason <fredg@paravelsystems.com>
+	* Incremented the package version to 3.0.0rc3.
