--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,15 @@
 The NEWS file for the Davit package.
 
 -------------------------------------------------------------------------------
+v3.0.0rc5 -- 3 December 2025
+
+Changes:
+   Package dependencies. Added a 'wireguard-tools' dependency to the
+   'davit-gui' DEB package.
+
+   Same configuration. Fixed typos in the '[Wireguard]' section of the
+   sample davit.conf(5) file.
+-------------------------------------------------------------------------------
 v3.0.0rc4 -- 3 December 2025
 
 Changes:
